flux/apps/hindsight/app/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hindsight-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hindsight
      app.kubernetes.io/component: api
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
            gateway.envoyproxy.io/owning-gateway-name: private-gateway
        - matchLabels:
            io.kubernetes.pod.namespace: hindsight
            app.kubernetes.io/name: hindsight
            app.kubernetes.io/component: control-plane
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: obs-collect
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: hindsight
            cnpg.io/cluster: pg-hindsight-memory
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toFQDNs:
        - matchName: ai.nahsi.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: agenticgateway
            gateway.networking.k8s.io/gateway-name: agenticgateway-internal
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hindsight-control-plane
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hindsight
      app.kubernetes.io/component: control-plane
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
            gateway.envoyproxy.io/owning-gateway-name: private-gateway
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: hindsight
            app.kubernetes.io/name: hindsight
            app.kubernetes.io/component: api
      toPorts:
        - ports:
            - port: "8888"
              protocol: TCP
